--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Feira City Login</title>
-        <link rel="stylesheet" href="style.css" />
-        <link rel="stylesheet" href="animation.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/animation.css" />
         <link rel="stylesheet" href="css/remixicon.css" />
+        <link rel="stylesheet" href="litenotify/litenotify.css" />
         <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfZZSYpAAAAAC2isuq3ViOP2cvs7yy814bwm5z-"></script>
     </head>
     <body>
@@ -17,7 +18,7 @@
                 <div class="left">
                     <!-- Mensagem Hello -->
                     <div class="welcome">
-                        <img src="img/Logo fc.png" alt="Logo" />
+                        <img src="img/logo_fc.png" alt="Logo" />
                         <h1>Bem vindo!</h1>
                         <p>
                             Para fazer Login, <br />
@@ -45,9 +46,10 @@
             <div class="formsContainer">
                 <!-- Form da Direita -->
                 <div class="right">
-                    <h2>Acessar área admnistrativa</h2>
+                    <h2>Acessar área administrativa</h2>
                     <form
-                        action=""
+                        action="/"
+                        method="POST"
                         id="login-form"
                         class="fbox fbox_column fbox_space_between"
                     >
@@ -85,6 +87,7 @@
                             data-sitekey="6LfZZSYpAAAAAC2isuq3ViOP2cvs7yy814bwm5z-"
                             data-callback="onSubmit"
                             data-action="submit"
+                            id="login-button"
                         >
                             Entrar
                         </button>
@@ -100,14 +103,14 @@
                 </div>
             </div>
         </section>
-        <!-- Replace the variables below. -->
-        <script>
-            function onSubmit(token) {
-                document.getElementById("login-form").submit();
-            }
-        </script>
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"
+        ></script>
 
         <!-- Scripts -->
+        <script src="litenotify/litenotify.js"></script>
         <script src="js/js.js"></script>
     </body>
 </html>
