refact: recaptcha now resets when form is incorrect

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         <link rel="stylesheet" href="css/animation.css" />
         <link rel="stylesheet" href="css/remixicon.css" />
         <link rel="stylesheet" href="litenotify/litenotify.css" />
-        <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfZZSYpAAAAAC2isuq3ViOP2cvs7yy814bwm5z-"></script>
+
+        <script
+            src="https://www.google.com/recaptcha/api.js"
+            async
+            defer
+        ></script>
     </head>
     <body>
         <section class="mainLogin">
